# Personal_Schedule

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  ai_personal_productivity_os_workflow.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py  schemas.py
app/api/: routes.py
app/core/: settings.py
app/integrations/: gmail.py
app/llm/: providers.py
app/memory/: embeddings.py  qdrant.py
app/reliability/: guardrails.py
app/storage/: __init__.py  repository.py
app/web/: app.js  calendar.css  calendar.html  calendar.js  index.html  styles.css
app/workflow/: calendar_workflow.py  personalized_service.py  service.py
evals/: run.py
evals/data/: golden.jsonl
tests/: test_api.py  test_behavior_learning.py  test_calendar_workflow.py  test_deadline_normalization.py  test_gmail_integration.py  test_guardrails.py  test_persistence.py  test_roadmap_safety.py
