[project]
name = "ai-personal-productivity-os"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic-settings>=2.6,<3",
  "httpx>=0.27,<1",
  "openai>=1.60,<2",
  "google-genai>=1.0,<2",
  "google-api-python-client>=2.140,<3",
  "google-auth-httplib2>=0.2,<1",
  "google-auth-oauthlib>=1.2,<2",
  "qdrant-client>=1.12,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.9,<1"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["evals*", "tests*"]

[tool.setuptools.package-data]
app = ["web/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".personal_schedule", ".venv", "venv", "env"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
