[project]
name = "ai-personal-productivity-os"
version = "0.1.0"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.9,<1"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["evals*", "tests*"]

[tool.setuptools.package-data]
app = ["web/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".personal_schedule", ".venv", "venv", "env"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
